delay in result

--- a/main.html
+++ b/main.html
@@ -20,12 +20,12 @@
         <div class="player-2 players">Player-2 :-O</div>
     </div>
     <div class="main-btn" id="main-menu">
-        <div id="start" class="main-btn-design">
+        <button id="start" class="main-btn-design">
             Start
-        </div>
-        <div id="reset" class="main-btn-design" >
+        </button>
+        <button id="reset" disabled class="main-btn-design" >
             Reset
-        </div>
+        </button>
     </div>
     <div id="game-over" class="game-end-banner">
         Game Over
@@ -42,6 +42,7 @@
         <div>Press <strong>Reset Button</strong> to start Again</div>
 
     </div>
+    <hr>
     <div id="game-grid">
         <div class="I-column">
             <div class="game-space-row-1 game-space-rows">
