Theme,design of board,output result screen and other minor fixes

--- a/main.html
+++ b/main.html
@@ -27,9 +27,6 @@
             Reset
         </button>
     </div>
-    <div id="game-over" class="game-end-banner">
-        Game Over
-    </div>
     <div id="player-1" class="game-end-banner">
         Game Over and
         Player 1 Win's the game
@@ -64,9 +61,9 @@
         <div class="III-column">
             <div class="game-space-row-3 game-space-rows">
                 <!-- 4 -->
-                <div id="7" class="game-obj-placeable game-obj game-grid-c1 mustHaveContentForWin" style="border-bottom: 0;"><p></p></div>
-                <div id="8" class="game-obj-placeable game-obj game-grid-c1" style="border-bottom: 0;"><p></p></div>
-                <div id="9" class="game-obj-placeable game-obj game-grid-c3" style="border-bottom: 0;"><p></p></div>
+                <div id="7" class="game-obj-placeable game-obj game-grid-c1 mustHaveContentForWin"><p></p></div>
+                <div id="8" class="game-obj-placeable game-obj game-grid-c1"><p></p></div>
+                <div id="9" class="game-obj-placeable game-obj game-grid-c3"><p></p></div>
             </div>
         </div>
 
